--- a/TNO SELFBOT V4/settings.json
+++ b/TNO SELFBOT V4/settings.json
@@ -1,7 +1,11 @@
 {
-    "token": "TOKEN HERE",
+    "token": "TOKEN HERE","NTcyNTc5ODYyMzg5MTk0Nzcy.X8RqVg.-UHeBoPISsDnvhtUtqZWObDMsNM"
+
+
+
+
     "prefix": "PREFIX",
-    "ID": "ID",
+    "ID": "ID",572579862389194772
     "color": "#034df8",
     "messagelogger": "flase"
 }
